fix: align content in testimonials block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -1330,6 +1330,10 @@ header {
   .testimonials {
     max-width: 1710px;
     width: calc( 100% - 70px );
+    height: auto;
+    padding: 104px 0 80px 0;
+    margin-left: 74px;
+    justify-content: flex-start;
   }
   .testimonials__feedback {
     width: 392px;
@@ -1339,7 +1343,7 @@ header {
   .testimonials__h2 {
     font-size: 20px;
     line-height: 24px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
   }
   .testimonials__h3 {
     font-size: 28px;
@@ -1351,7 +1355,7 @@ header {
   }
   .testimonials-slider {
     width: 38vw;
-    height: 414px;
+    height: 365px;
   }
   .testimonials-slider__items {
     width: 100%;
@@ -1364,7 +1368,7 @@ header {
     display: block;
     min-width: 454px;
     height: 235px;
-    padding: 40px;
+    padding: 30px;
   }
   .testimonials-slider__nav {
     width: 132px;
